Fix cramped title bar

--- a/packages/react-components/SideMenu/index.module.css
+++ b/packages/react-components/SideMenu/index.module.css
@@ -5,6 +5,7 @@
   border: none;
   color: hsl(0deg 0% 100%);
   outline: none;
+  z-index: 999;
 
   @media screen and (width <=1024px) {
     display: block;
